fix: fixed firefox backface visibility

--- a/src/shared/ui/atoms/cell/styles.module.scss
+++ b/src/shared/ui/atoms/cell/styles.module.scss
@@ -49,6 +49,10 @@
   }
 }
 
+.front {
+  transform: rotateX(0deg);
+}
+
 .back {
   transform: rotateY(180deg);
 }
